--- a/example.config.yml
+++ b/example.config.yml
@@ -1,29 +1,3 @@
 ---
 # Location where configuration files will be stored.
-config_dir: "{{ '~' | expanduser }}"
-
-# Domain names configuration (related services need to be enabled).
-domain_name_enable: false
-domain_name: "home.local"
-domain_pihole: "pihole" # to access pihole via: http://pihole.home.local
-
-# Zigbee2mqtt configuration.
-zigbee2mqtt_enable: true
-
-# Mosquitto configuration.
-mosquitto_enable: true
-mosquitto_password: "change-this-password"
-
-# Pi-hole configuration.
-pihole_enable: false
-pihole_hostname: pihole
-pihole_password: "change-this-password"
-
-# Portainer configuration.
-portainer_enable: false
-
-# Tesla custom integration configuration.
-tesla_enable: false
-
-# Global config
-container_timezone: Europe/Amsterdam
+config_dir: "~"
