--- a/main.yml
+++ b/main.yml
@@ -26,6 +26,5 @@
     - name: Setup Docker.
       ansible.builtin.import_tasks: tasks/docker.yml
 
-    - name: Set up Portainer.
-      ansible.builtin.import_tasks: tasks/portainer.yml
-      when: portainer_enable
+    - name: Set up Discord Soundbot.
+      ansible.builtin.import_tasks: tasks/discord-soundbot.yml
