Add python3.6 install step

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,4 +1,4 @@
-[automated_pi]
+[automatron]
 127.0.0.1 ansible_connection=local ansible_user=pi
 
 # Comment out the previous line and uncomment this to run inside Raspberry Pi.
