--- a/main.yml
+++ b/main.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: automatron
-  become: false
+  become: true
 
   pre_tasks:
     - name: Load configuration (with defaults from example file).
