Add music bot task

--- a/main.yml
+++ b/main.yml
@@ -27,3 +27,6 @@
   tasks:
     - name: Setup Python.
       ansible.builtin.import_tasks: tasks/raspbian-python-installer.yml
+
+    - name: Setup MusicBot.
+      ansible.builtin.import_tasks: tasks/music-bot-installer.yml
