--- a/tasks/raspbian-python-installer.yml
+++ b/tasks/raspbian-python-installer.yml
@@ -1,22 +1,24 @@
 ---
-- name: "python{{python_version}} runtime&build dependencies"
+- name: Install dependencies
+  become: true
   apt:
     name:
+      - git
+      - libopus-dev
+      - libffi-dev
+      - libsodium-dev
+      - ffmpeg
       - build-essential
-      - tk-dev
-      - libncurses5-dev
       - libncursesw5-dev
-      - libreadline6-dev
-      - libdb5.3-dev
       - libgdbm-dev
-      - libsqlite3-dev
-      - libssl-dev
-      - libbz2-dev
-      - libexpat1-dev
-      - liblzma-dev
+      - libc6-dev
       - zlib1g-dev
+      - libsqlite3-dev
+      - tk-dev
+      - libssl-dev
+      - openssl
     state: present
-  become: true
+
 
 - name: "Download python{{python_version}}"
   get_url:
