--- a/tasks/raspbian-python-installer.yml
+++ b/tasks/raspbian-python-installer.yml
@@ -1,9 +1,8 @@
-- name: Check if Python {{ python_version }} is installed
-  command: python{{ python_version | round(1) }} --version
-  register: python_is_installed
-  ignore_errors: true
-  changed_when: false
-  become: false
+---
+
+- name: get python version
+  shell: python -V
+  register: python_version
 
 - name: Install dependencies
   become: true
@@ -24,13 +23,12 @@
       - libssl-dev
       - openssl
     state: present
-  when: python_is_installed.rc != 0
 
 - name: "Download python{{ python_version }}"
   get_url:
     url="https://www.python.org/ftp/python/{{ python_version }}/Python-{{ python_version }}.tar.xz"
     dest="/tmp/Python-{{ python_version }}.tar.xz"
-  when: python_is_installed.rc != 0
+  when: ansible_python_version is version('{{ python_version }', '<')
   become: false
 
 - name: "Unarchive python{{ python_version }}"
@@ -39,7 +37,7 @@
     dest="/tmp/"
     copy=no
     creates="/tmp/Python-{{ python_version }}"
-  when: python_is_installed.rc != 0
+  when: ansible_python_version is version('{{ python_version }', '<')
   become: false
 
 - name: "configure python{{ python_version }} build"
@@ -47,7 +45,7 @@
   args:
     chdir: "/tmp/Python-{{ python_version }}"
     creates: "/tmp/Python-{{ python_version }}/Makefile"
-  when: python_is_installed.rc != 0
+  when: ansible_python_version is version('{{ python_version }', '<')
   become: false
 
 - name: "build python{{ python_version }}"
@@ -56,12 +54,12 @@
   args:
     chdir: "/tmp/Python-{{ python_version }}"
     creates: "/tmp/Python-{{ python_version }}/python"
-  when: python_is_installed.rc != 0
+  when: ansible_python_version is version('{{ python_version }', '<')
   become: false
 
 - name: "install python{{ python_version }}"
   make:
     chdir: "/tmp/Python-{{ python_version }}"
     target: altinstall
-  when: python_is_installed.rc != 0
+  when: ansible_python_version is version('{{ python_version }', '<')
   become: true
