--- a/tasks/music-bot-installer.yml
+++ b/tasks/music-bot-installer.yml
@@ -5,3 +5,19 @@
     dest: "{{ config_dir }}/MusicBot"
     version: master
   become: false
+
+- name: Create MusicBot config
+  copy:
+    src: "{{ config_dir }}/MusicBot/config/example_options.ini"
+    dest: "{{ config_dir }}/MusicBot/config/options.ini"
+
+- name: Update INI file
+  ini_file:
+    path: /path/to/ini/file.ini
+    section: "{{ item.section }}"
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  with_items:
+    - { section: "Credentials", option: "Token", value: "{{ discord_bot_token }}" }
+    - { section: "Credentials", option: "Spotify_ClientID", value: "{{ spotify_client_id }}" }
+    - { section: "Credentials", option: "Spotify_ClientSecret", value: "{{ spotify_client_secret }}" }
