--- a/tasks/pip-installer.yml
+++ b/tasks/pip-installer.yml
@@ -1,6 +1,6 @@
 ---
 - name: Check to see if pip is already installed.
-  command: "{{ pip }} --version"
+  command: "pip --version"
   ignore_errors: true
   changed_when: false
   check_mode: false
@@ -14,7 +14,11 @@
   become: true
   when: pip_installed.rc != 0
 
+- name: Extract major and minor version numbers from Python version string
+  set_fact:
+    python_version_major_minor: "{{ python_version.split('.')[0:2] | join('.') }}"
+
 - name: Run get-pip.py script
-  command: "{{ python }} /tmp/get-pip.py"
+  command: "python{{ python_version_major_minor }} /tmp/get-pip.py"
   become: true
   when: pip_installed.rc != 0
